# rust_py_sdl

./: .gitignore  Cargo.toml  pyproject.toml
python/: pyproject.toml
python/rust_py/: main.py
src/: lib.rs
