[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[project]
name = "rustpy"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
